2005-01-03  Christian Neumair  <chris@gnome-de.org>

	* freedesktop.org.xml.in: Add Objective-C, C and C header magic
	patterns, add matlab MIME type and magic patterns. Fixes #3971.

2005-12-31  Christian Neumair  <chris@gnome-de.org>

	* freedesktop.org.xml.in: Add XML-style comment magic pattern to XML
	MIME type.

2005-12-25  Christian Neumair  <chris@gnome-de.org>

	* freedesktop.org.xml.in: Make "audio/3gpp" an alias for "video/3gpp".
	Fixes #5419. Thanks to Thiago Macieira and GML.

2005-12-19  Christian Neumair  <chris@gnome-de.org>

	* freedesktop.org.xml.in: Add CBR/CBZ MIME types "application/x-cbr"
	and "application/x-cbz". Fixes #3122. Thanks to Paul Coates, Nickolay
	V. Shmyrev and Olivier Le Thanh Duong.

2005-12-19  Matthias Clasen  <mclasen@redhat.com>

	* update-mime-database.c (write_magic_cache): Reset the match data
	offset when starting to write out match datas, pointed out by
	Alex Larsson.

2005-12-17  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: search a bit further in ASF playlists
	(GNOME bug #323683)

2005-12-16  Christian Neumair  <chris@gnome-de.org>

	* freedesktop.org.xml.in: Add ChangeLog MIME type "text/x-changelog".
	Fixes #5355. Thanks to Björn Lindqvist and Paolo Borelli.

2005-12-02  Christian Neumair  <chris@gnome-de.org>

	* freedesktop.org.xml.in: Modify Ogg-related MIME types to match the
	XML naming pattern. Thanks to Peter Bowen.

2005-12-01  Christian Neumair  <chris@gnome-de.org>

	* freedesktop.org.xml.in: Add Ogg-related MIME types:
	"audio/x-vorbis", "audio/x-oggflac", "audio/x-speex", "video/x-theora"
	and "video/x-ogm". Make them subtypes of "application/ogg".
	Fixes #1002.

2005-12-01  Christian Neumair  <chris@gnome-de.org>

	* freedesktop.org.xml.in: Make "application/x-mozilla-bookmarks"
	subtype of "text/html". Fixes #3169. Thanks to Reinout van Schouwen.

2005-12-01  Matthias Clasen  <mclasen@redhat.com>

	* shared-mime-info-spec.xml: Add acronym and expanded-acronym