@@ -2914,6 +2914,15 @@ command to generate the output files.
     <glob pattern="*.xml"/>
     <alias type="text/xml"/>
   </mime-type>
+  <mime-type type="video/dv">
+    <_comment>DV video</_comment>
+    <acronym>DV</acronym>
+    <expanded-acronym>Digital Video</expanded-acronym>
+    <magic priority="50">
+      <match type="big32" value="0x1f070000" mask="0xffffff00" offset="0"/>
+    </magic>
+    <glob pattern="*.dv"/>
+  </mime-type>
   <mime-type type="video/isivideo">
     <_comment>ISI video</_comment>
   </mime-type>
