@@ -1,3 +1,7 @@
+2006-01-04  Bastien Nocera  <hadess@hadess.net>
+
+	* freedesktop.org.xml.in: Add video/dv detection
+
 2005-01-03  Christian Neumair  <chris@gnome-de.org>
 
 	* freedesktop.org.xml.in: Add Objective-C, C and C header magic
